# stand

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  code-review.md  code-review2.md  deny.toml  mise.toml  pr-7-description.txt  pr-7-diff.diff
.claude/: settings.json
.claude/commands/: pr.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
.serena/: project.yml
docs/: architecture.md  cli.md  configuration.md  design.md  development-guideline.md  pr-review-guidelines.md  requirements.md
examples/: README.md
examples/basic/: .stand.toml
examples/inheritance/: .stand.toml
examples/interpolation/: .stand.toml
examples/web-app/: .stand.toml
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs
src/commands/: current.rs  encrypt.rs  env.rs  exec.rs  get.rs  init.rs  list.rs  mod.rs  set.rs  shell.rs  show.rs  switch.rs  unset.rs  validate.rs
src/config/: loader.rs  mod.rs  types.rs  validator.rs
src/crypto/: age_crypto.rs  keys.rs  mod.rs
src/environment/: loader.rs  merger.rs  mod.rs  parser.rs  resolver.rs
src/error/: mod.rs  types.rs
src/process/: executor.rs
src/shell/: detector.rs  mod.rs  prompt.rs  spawner.rs
src/state/: mod.rs  persistence.rs  types.rs
src/utils/: colors.rs  mod.rs  paths.rs
tests/: cli_tests.rs  config_tests.rs  env_loading_tests.rs  env_parsing_tests.rs  env_resolver_tests.rs  exec_command_tests.rs  list_command_tests.rs  show_command_tests.rs  toml_config_tests.rs  toml_inheritance_property_tests.rs  toml_inheritance_tests.rs  toml_interpolation_error_tests.rs  toml_parser_tests.rs  toml_validation_tests.rs
