[package]
name = "stand"
version = "0.2.0"
edition = "2021"
authors = ["ueneid"]
description = "A CLI tool for explicit environment variable management"
license = "MIT"
repository = "https://github.com/ueneid/stand"
readme = "README.md"
keywords = ["cli", "environment", "dotenv", "shell"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive", "color", "suggestions"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal and output
colored = "2.0"

# Data structures
indexmap = { version = "2.0", features = ["serde"] }

# Encryption
age = { version = "0.10", default-features = false }
base64 = "0.22"

# System utilities
dirs = "5.0"
which = "4.4"

# Optional dependencies for development
[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
