[package]
name = "stand"
version = "0.2.1"
edition = "2021"
rust-version = "1.88"
authors = ["ueneid"]
description = "A CLI tool for explicit environment variable management"
license = "MIT"
repository = "https://github.com/ueneid/stand"
readme = "README.md"
keywords = ["cli", "environment", "dotenv", "shell"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "examples/**/*",
    "docs/architecture.md",
    "docs/cli.md",
    "docs/configuration.md",
    "docs/design.md",
    "docs/requirements.md",
]

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive", "color", "suggestions"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
toml_edit = "0.25"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal and output
colored = "2.0"
rpassword = "7.3"

# Data structures
indexmap = { version = "2.0", features = ["serde"] }

# Encryption
age = { version = "0.10", default-features = false }
base64 = "0.22"

# Optional dependencies for development
[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
